--- a/pdf-editor/package.json
+++ b/pdf-editor/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/get-file": "^3.12.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
